--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 
 
 baseurl: "/Webblog" # the subpath of your site, e.g. /blog
-url: "mbelisle03.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://mbelisle03.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  mbelisle03
 
