--- a/_config.yml
+++ b/_config.yml
@@ -23,17 +23,20 @@ email: marcel.belisle1@gmail.com
 description: >- # this means to ignore newlines until "baseurl:" 
 
 
-baseurl: "/Webblog" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://mbelisle03.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  mbelisle03
 
 # Build settings
 theme: jekyll-theme-clean-blog
+markdown:           kramdown
+paginate:           5
+paginate_path:      "/posts/page:num/"
 plugins:
   - jekyll-feed
-
-
+  - jekyll-paginate
+  - jekyll-sitemap
 
 show_excerpts: true
 permalink: /:collection/:year-:month-:day-:title:output_ext
