--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: marcel.belisle1@gmail.com
 description: >- # this means to ignore newlines until "baseurl:" 
 
 
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/Webblog" # the subpath of your site, e.g. /blog
 url: "https://mbelisle03.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  mbelisle03
